--- a/diseñologin/login.html
+++ b/diseñologin/login.html
@@ -7,7 +7,7 @@
 
   <style>
     body {
-      background-color: pink; /* Fondo rosa */
+      background-color: hsl(350, 100%, 88%); /* Fondo rosa */
       
     }
 
