--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
   <link href="css/styles.css" rel="stylesheet">
   <style>
     body {
-      background-color: rgb(248, 249, 250);
+      background-color:hsl(350, 100%, 88%);
     }
   </style>
 </head>
