--- a/login.html
+++ b/login.html
@@ -11,24 +11,50 @@
   <link href="css/styles.css" rel="stylesheet">
   <style>
     body {
-      background-color:hsl(350, 100%, 88%);
+      background-color: hsl(350, 100%, 88%); /* Fondo rosa */
+      
     }
+
+    .login-card {
+      background-color: rgba(255, 182, 193, 0.9); /* Rosa clarito */
+      border-radius: 15px;
+    }
+
+    /* Botón rosa intenso */
+    .btn-rosa {
+      background-color: #e75480; /* Rosa intenso */
+      color: white;
+      border: none;
+    }
+
+    .btn-rosa:hover {
+      background-color: hsl(339, 67%, 52%); /* Más oscuro al pasar el mouse */
+      color: white;
+    }
+ 
   </style>
 </head>
-
-<body>
-  <main class="mt-5">
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+  
+<body class="d-flex justify-content-center align-items-center vh-100">
+  <img src="img/login_JaP.png" alt="Logo" class="position-absolute top-0 start-0 m-1" width="450">
+  <img src="img/login-e-mercado.png" alt="Logo" class="position-absolute top-0 end-0 m-3" width="350">
+  <div class="card shadow p-4 login-card" style="width: 22rem;">
+      <h3 class="text-center mb-4">Iniciar Sesión</h3>
+    
+    <form>
+      <div class="mb-3">
+        <label for="usuario" class="form-label">Usuario</label>
+        <input type="text" class="form-control" id="usuario" placeholder="Ingresa tu usuario" required>
       </div>
-    </div>
-  </main>
-  <footer class="text-muted">
-    <div class="container">
-      <p class="float-end">
-        <a href="#">Volver arriba</a>
-      </p>
+
+      <div class="mb-3">
+        <label for="contraseña" class="form-label">Contraseña</label>
+        <input type="password" class="form-control" id="contraseña" placeholder="Ingresa tu contraseña" required>
+      </div>
+
+      <button type="submit" class="btn btn-rosa w-100">Insertar</button>
+    </form>
+  </div>
       <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
     </div>
   </footer>
