--- a/products.html
+++ b/products.html
@@ -46,7 +46,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
            </li>
            <li class="nav-item">
-            <a class="nav-link" href="#">Usuario</a>
+            <a class="nav-link" href="login.html">Usuario</a>
            </li>
            <li class="nav-item">
            </li>
