--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
   <div class="card shadow p-4 login-card" style="width: 22rem;">
       <h3 class="text-center mb-4">Iniciar Sesión</h3>
     
-    <form>
+    <form id="loginForm">
       <div class="mb-3">
         <label for="usuario" class="form-label">Usuario</label>
         <input type="text" class="form-control" id="usuario" placeholder="Ingresa tu usuario" required>
@@ -36,7 +36,7 @@
         <input type="password" class="form-control" id="contraseña" placeholder="Ingresa tu contraseña" required>
       </div>
 
-      <button type="submit" class="btn btn-rosa w-100">Insertar</button>
+      <button type="submit" class="btn btn-rosa w-100" id="boton">Insertar</button>
     </form>
   
       
