--- a/products.html
+++ b/products.html
@@ -21,7 +21,7 @@
 
    <header> 
 
-      <div class="logo"><img src=C:\Users\Usuario\Documents\GitHub\Proyecto-Final-JAP-Grupo2\img\79b3f9d10a053a652bdca58e7847d88ddbde4397.png alt=""></div>
+      <div class="logo"><img src=\img\79b3f9d10a053a652bdca58e7847d88ddbde4397.png alt=""></div>
 
       <div
          class="barra">
