--- a/products.html
+++ b/products.html
@@ -33,8 +33,8 @@
 
 
      <div class="Menu">
-      <nav>
-        <div class="container">
+      <nav > 
+        <div class="container ">
           <ul>
            <li class="nav-item">
              <a class="nav-link active" href="index.html">Inicio</a>
@@ -45,11 +45,9 @@
            <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
            </li>
-           <li class="nav-item">
-            <a class="nav-link" href="login.html">Usuario</a>
+           <li class="nav-item" id="nickname">
            </li>
-           <li class="nav-item">
-           </li>
+         
           </ul>
           </div>
         </nav>
