listo para pintar creo

--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
 
     <div class="logo"><img src=\img\79b3f9d10a053a652bdca58e7847d88ddbde4397.png alt=""></div>
 
-    <div class="barra">
+    <div class="barra end-0 ">
       <form action="/buscar" method="GET">
         <input type="search" placeholder="Buscar...">
         <button class="Icono" type="button"><i class="bi bi-search"></i> </button>
