--- a/products.html
+++ b/products.html
@@ -59,11 +59,11 @@
              <li class="nav-item">
               <a class="nav-link fw-bold" href="login.html">Usuario</a>
             </li>
-            <li class="nav-item dropdown d-block">
-              <a class="nav-link dropdown-toggle" href="nickname" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="login.html" id="nickname" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
               </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="login.html">Cerrar Sesion</a></li>
+                  <li><a class="dropdown-item" id="cerrar" href="#">Cerrar Sesion</a></li>
                 </ul>
             </li>
           </ul> 
