--- a/products.html
+++ b/products.html
@@ -62,8 +62,8 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="login.html" id="nickname" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
               </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" id="cerrar" href="#">Cerrar Sesion</a></li>
+                <ul class="dropdown-menu" aria-labelledby="#nickname">
+                  <li><a class="dropdown-item" href="login.html" id="cerrar">Cerrar Sesion</a></li>
                 </ul>
             </li>
           </ul> 
