--- a/products.html
+++ b/products.html
@@ -32,6 +32,7 @@
       </div>
 
       
+    
           <nav class="navbar navbar-expand-lg navbar-light; p-1 d-flex flex-row shadow-sm rounded-4 fixed-top ">
       <div class="container">
         <button
@@ -62,8 +63,8 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="login.html" id="nickname" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
               </a>
-                <ul class="dropdown-menu" aria-labelledby="#nickname">
-                  <li><a class="dropdown-item" href="login.html" id="cerrar">Cerrar Sesion</a></li>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" href="#">Cerrar Sesion</a></li>
                 </ul>
             </li>
           </ul> 
