--- a/products.html
+++ b/products.html
@@ -63,7 +63,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="login.html" id="nickname" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
               </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <ul class="dropdown-menu" aria-labelledby="nickname">
                   <li><a class="dropdown-item" href="#">Cerrar Sesion</a></li>
                 </ul>
             </li>
