--- a/products.html
+++ b/products.html
@@ -36,7 +36,7 @@
           <nav class="navbar navbar-expand-lg navbar-light; p-1 d-flex flex-row shadow-sm rounded-4 fixed-top ">
       <div class="container">
         <button
-          class="navbar-toggler"
+          class="navbar-toggler shadow-none bg-light"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -44,7 +44,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon shadow-none bg-light"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav w-100 justify-content-between">
