--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <link href="css/styleslogin.css" rel="stylesheet" />
   </head>
 
-  <body class="d-flex justify-content-center align-items-center vh-100">
+  <body class="position-relative vh-100">
     <div id="imagenes">
       <img
         id="logojap"
@@ -36,11 +36,11 @@
         id="jap-emercado"
         src="img\79b3f9d10a053a652bdca58e7847d88ddbde4397.png"
         alt="logo"
-        class="position-absolute top-0 end-0 m-3"
+        class="position-absolute top-0 start-50 translate-middle-x"
         width="350"
       />
     </div>
-    <div class="card shadow p-4 login-card" style="width: 22rem">
+    <div class="position-absolute top-50 start-50 translate-middle card shadow p-4 login-card" >
       <h3 class="text-center mb-4">Iniciar Sesión</h3>
 
       <form id="loginForm">
