--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
         </div>
 
         <button type="submit" class="btn btn-rosa w-100" id="boton">
-          Insertar
+          Ingresar
         </button>
       </form>
     </div>
