--- a/products.html
+++ b/products.html
@@ -27,7 +27,7 @@
          class="barra">
          <form action="/buscar" method="GET">
            <input type="search"  placeholder="Buscar...">
-           <button class="Boton" type="button" ><i class="bi bi-search"></i class="Icono"></button>
+           <button  type="button" class="Boton" ><i class="bi bi-search"></i class="Icono"></button>
         </form>
       </div>
 
