--- a/products.html
+++ b/products.html
@@ -64,7 +64,7 @@
               <a class="nav-link dropdown-toggle" href="login.html" id="nickname" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
               </a>
                 <ul class="dropdown-menu" aria-labelledby="nickname">
-                  <li><a class="dropdown-item" href="#">Cerrar Sesion</a></li>
+                  <li><a class="dropdown-item" href="index.html" id="cerrar">Cerrar Sesion</a></li>
                 </ul>
             </li>
           </ul> 
@@ -111,8 +111,7 @@
 
   
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+ 
 
 
 </body>
