--- a/products.html
+++ b/products.html
@@ -46,7 +46,7 @@
         >
           <span class="navbar-toggler-icon shadow-none bg-light"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse col-1" id="navbarNav">
           <ul class="navbar-nav w-100 justify-content-between">
             <li class="nav-item">
               <a class="nav-link fw-bold" href="index.html">Inicio</a>
