--- a/products.html
+++ b/products.html
@@ -76,6 +76,13 @@
     </header>
 
   <section class="container overflow-hidden">
+      <button id="sortListCostDec">precio descendiente</button>
+      <button id="sortListCostAsc">precio ascendiente</button>
+      <br>
+      <input type="number" placeholder="min" id="min" > 
+      <label for="">-</label> 
+      <input type="number" placeholder="max" id="max" >
+      <input type="button" value="enviar" id="rangeValue">
     <div id="items" class="row row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-4 g-3 g-sm-4 g-lg-3 g-xl-4"
       id="products">
       
