--- a/products.html
+++ b/products.html
@@ -27,7 +27,7 @@
       <div
          class="barra">
          <form action="/buscar" method="GET">
-           <input type="search"  placeholder="Buscar...">
+           <input type="text"  placeholder="Buscar..." id="search" >
            <button  type="button" class="Boton" ><i class="bi bi-search"></i class="Icono"></button>
         </form>
       </div>
