--- a/products.html
+++ b/products.html
@@ -24,8 +24,7 @@
 
     <div class="logo"><img src=\img\79b3f9d10a053a652bdca58e7847d88ddbde4397.png alt=""></div>
 
-      <div
-         class="barra">
+      <div class="barra">
          <form action="/buscar" method="GET">
            <input type="text"  placeholder="Buscar..." id="search" >
            <button  type="button" class="Boton" ><i class="bi bi-search"></i class="Icono"></button>
@@ -76,6 +75,8 @@
     </header>
 
   <section class="container overflow-hidden">
+      <input type="range" min="0" max="350000" id="range" style="width: 450px;">
+      <br>
       <button id="sortListCostDec">precio descendiente</button>
       <button id="sortListCostAsc">precio ascendiente</button>
     
