--- a/products.html
+++ b/products.html
@@ -75,7 +75,7 @@
     </header>
 
   <section class="container overflow-hidden">
-      <input type="range" min="0" max="350000" id="range" style="width: 450px;">
+      <input type="range" min="13500" max="3500000" step="10" id="range" style="width: 450px;">
       <br>
       <button id="sortListCostDec">precio descendiente</button>
       <button id="sortListCostAsc">precio ascendiente</button>
