--- a/products.html
+++ b/products.html
@@ -24,10 +24,10 @@
 
     <div class="logo"><img src=\img\79b3f9d10a053a652bdca58e7847d88ddbde4397.png alt=""></div>
 
-      <div class="barra">
-         <form action="/buscar" method="GET">
+      <div class="barra" id="searchForm">
+         <form action="" autocomplete="on">
            <input type="text"  placeholder="Buscar..." id="search" >
-           <button  type="button" class="Boton" ><i class="bi bi-search"></i class="Icono"></button>
+           <button  id="searchBtn" type="button" class="Boton" ><i class="bi bi-search"></i class="Icono"></button>
         </form>
       </div>
 
