--- a/products.html
+++ b/products.html
@@ -33,7 +33,7 @@
 
       
     
-          <nav class="navbar navbar-expand-lg navbar-light; p-1 d-flex flex-row shadow-sm rounded-4 fixed-top">
+          <nav class="navbar navbar-expand-lg p-1 d-flex flex-row shadow-sm rounded-4 fixed-top">
       <div class="container">
         <button
           class="navbar-toggler shadow-none bg-light"
@@ -52,7 +52,7 @@
               <a class="nav-link fw-bold" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active fw-bold" href="categories.html">Categorías</a>
+              <a class="nav-link fw-bold" href="categories.html">Categorías</a>
             </li>
             <li class="nav-item">
               <a class="nav-link fw-bold" href="sell.html">Vender</a>
@@ -62,7 +62,6 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="login.html" id="nickname" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
-              </a>
                 <ul class="dropdown-menu" aria-labelledby="nickname">
                   <li><a class="dropdown-item" href="index.html" id="cerrar">Cerrar Sesion</a></li>
                 </ul>
