--- a/products.html
+++ b/products.html
@@ -76,7 +76,8 @@
   <section class="container overflow-hidden">
       <button id="sortListCostDec">precio descendiente</button>
       <button id="sortListCostAsc">precio ascendiente</button>
-    
+       <button id="sortListRel">relevancia</button>
+      
     <input type="number" placeholder="min" id="min" style="width: 200px;" > 
     <label for="">-</label> 
     <input type="number" placeholder="max" id="max" style="width: 200px;">
