product-info-logos

--- a/product-info.html
+++ b/product-info.html
@@ -9,10 +9,20 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
+  <link href="css/products-info.css" rel="stylesheet">
 </head>
 
 <body>
+
+<header>
+
+
+<div class="logo1"><img src="\img\login_JaP.png" alt=""></div>
+
+<div class="logo2"><img src="\img\login-e-mercado.png" alt=""></div>
+
+</header>
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -37,11 +47,7 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
-    </div>
+ 
   </main>
   <footer class="text-muted">
     <div class="container">
