--- a/products.html
+++ b/products.html
@@ -16,6 +16,7 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/stylesautos.css" rel="stylesheet">
+  <link href="css/stylesmenu.css" rel="stylesheet">
 </head>
 
 <body>
