--- a/categories.html
+++ b/categories.html
@@ -10,32 +10,49 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href="css/stylesmenu.css" rel="stylesheet">
 
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 justify-content-between">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="categories.html">Categorías</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
-          </li>
-         <li class="nav-item" id="nickname"></li>
-        </ul>
+<nav class="navbar navbar-expand-lg p-1 d-flex flex-row shadow-sm rounded-4 fixed-top">
+      <div class="container">
+        <button
+          class="navbar-toggler shadow-none bg-light"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon shadow-none bg-light"></span>
+        </button>
+        <div class="collapse navbar-collapse col-1" id="navbarNav">
+          <ul class="navbar-nav w-100 justify-content-between">
+            <li class="nav-item">
+              <a class="nav-link fw-bold" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold" href="categories.html">Categorías</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold" href="sell.html">Vender</a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link fw-bold" href="login.html">Usuario</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="login.html" id="nickname" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
+                <ul class="dropdown-menu" aria-labelledby="nickname">
+                  <li><a class="dropdown-item" href="index.html" id="cerrar">Cerrar Sesion</a></li>
+                </ul>
+            </li>
+          </ul> 
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  
   <main class="pb-5">
     <div class="text-center p-4">
       <h2>Categorías</h2>
