--- a/categories.html
+++ b/categories.html
@@ -11,7 +11,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/stylescategoria.css">
-
+  
 </head>
 
 <body>
@@ -33,13 +33,19 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
          <li class="nav-item" id="nickname"></li>
+          <li>
+             <div class="form-check form-switch"  >
+               <input class="form-check-input" type="checkbox" id="themeSwitch">
+               <label class="form-check-label" for="themeSwitch"> dark/light mode</label>
+             </div>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
   <main class="pb-5">
     <div class="text-center p-4">
-      <h2>Categorías</h2>
+      <h2 class="fw-bold">Categorías</h2>
       <p class="lead">Verás aquí todas las categorías del sitio.</p>
     </div>
     <div class="container">
