Cambio de font en product info

--- a/product-info.html
+++ b/product-info.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +46,7 @@
   <img src="img/login_Jap1.png" alt="Logo izquierda" class="img-fluid" style="max-height:70px;">
   <img src="img/login-e-mercado.png" alt="Logo derecha" class="img-fluid" style="max-height:60px;">
 </header>
-<body>
+
  <div class="container my-6">
     <div class="card-custom row">
       <div class="col-md-6 shadow-sm">
@@ -71,13 +74,13 @@
         </div>
       </div>
             <div class="col-md-6">
-        <h2 class="mb-5 mt-3 ms-3"> CHEVROLET ONIX JOY</h2>
+        <h2 class="mb-5 mt-3 ms-3 fw-bolder"> CHEVROLET ONIX JOY</h2>
 
-        <p class="ms-3"><strong>Precio:</strong> US$ 13.500</p>
-        <p class="ms-3"><strong>Categoría:</strong> Autos</p>
-        <p class="ms-3"><strong>Cantidad de vendidos:</strong> 14</p>
+        <p class="ms-3 fw-normal"><strong>Precio:</strong> US$ 13.500</p>
+        <p class="ms-3 fw-normal"><strong>Categoría:</strong> Autos</p>
+        <p class="ms-3 fw-normal"><strong>Cantidad de vendidos:</strong> 14</p>
       </div>
-      <div class="col-12 mt-3">
+      <div class="col-12 mt-3 fw-normal">
         <h5>Descripción:</h5>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
