--- a/product-info.html
+++ b/product-info.html
@@ -46,7 +46,7 @@
 <body>
  <div class="container my-6">
     <div class="card-custom row">
-      <div class="col-md-6 shadow-sm">
+      <div class="col-md-6">
         <div id="carCarousel" class="carousel slide mt-3" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -71,9 +71,9 @@
         </div>
       </div>
             <div class="col-md-6">
-        <h2 class="mb-5 mt-3 ms-3"> CHEVROLET ONIX JOY</h2>
+        <h2 class="card-text mb-5 mt-3 ms-3"> CHEVROLET ONIX JOY</h2>
 
-        <p class="ms-3"><strong>Precio:</strong> US$ 13.500</p>
+        <p class="ms-3 mt-3"><strong>Precio:</strong> US$ 13.500</p>
         <p class="ms-3"><strong>Categoría:</strong> Autos</p>
         <p class="ms-3"><strong>Cantidad de vendidos:</strong> 14</p>
       </div>
