--- a/product-info.html
+++ b/product-info.html
@@ -64,7 +64,7 @@
         <div id="carCarousel" class="carousel slide mt-3" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/prod50921_1.jpg" class="d-block w-100" alt="Auto 1">
+              <img src="img/prod150.jpg" class="d-block w-100" alt="Auto 1">
             </div>
             <div class="carousel-item">
               <img src="img/prod50921_2.jpg" class="d-block w-100" alt="Auto 2">
