--- a/product-info.html
+++ b/product-info.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+  
 <header>
 
 
@@ -21,31 +21,49 @@
 
 <div class="logo2"><img src="\img\login-e-mercado.png" alt=""></div>
 
+
+
+      <nav class="navbar navbar-expand-sm navbar-light; p-1 d-flex flex-row shadow-sm rounded-4 fixed-top d-md-block">
+      <div class="container fluid">
+          <button
+          class="navbar-toggler-sm shadow-none border-0 ms-auto" 
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon shadow-none"></span>
+        </button>
+        <div class="collapse navbar-collapse-end" id="navbarNav">
+          <ul class="navbar-nav w-100 justify-content-between">
+            <li class="nav-item">
+              <a class="nav-link fw-bold" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active fw-bold" href="categories.html">Categorías</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold" href="sell.html">Vender</a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link fw-bold" href="login.html">Usuario</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle fw-bold" href="login.html" id="nickname" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
+              </a>
+                <ul class="dropdown-menu" aria-labelledby="nickname">
+                  <li><a class="dropdown-item" href="index.html" id="cerrar">Cerrar Sesion</a></li>
+                </ul>
+            </li>
+          </ul> 
+        </div>
+      </div>
+    </nav>
+    
 </header>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 justify-content-between">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="categories.html">Categorías</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
-          </li>
-          <li class="nav-item" id="nickname">
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
   <main>
  
   </main>
