--- a/products.html
+++ b/products.html
@@ -47,7 +47,7 @@
               <a class="nav-link fw-bold" href="login.html">Usuario</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="login.html" id="nickname" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
+              <a class="nav-link dropdown-toggle fw-bold" href="login.html" id="nickname" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
               </a>
                 <ul class="dropdown-menu" aria-labelledby="nickname">
                   <li><a class="dropdown-item" href="index.html" id="cerrar">Cerrar Sesion</a></li>
