Revert "Merge branch 'Flor' into vale"
This reverts commit bc571d4f040730f3923e0e4f4c928cba3c0ea95b, reversing
changes made to 7a5cf6435df281a40d36f269b106d251269da130.

--- a/categories.html
+++ b/categories.html
@@ -10,8 +10,8 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-  <link href="css/stylesmenu.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="/css/stylescategoria.css">
+  
 </head>
 
 <body>
@@ -33,6 +33,12 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
          <li class="nav-item" id="nickname"></li>
+          <li>
+             <div class="form-check form-switch"  >
+               <input class="form-check-input" type="checkbox" id="themeSwitch">
+               <label class="form-check-label" for="themeSwitch"> dark/light mode</label>
+             </div>
+          </li>
         </ul>
       </div>
     </div>
