--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
     />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
-    <link href="css/stylesmenu.css" rel="stylesheet">
-
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg p-1 d-flex flex-row shadow-sm rounded-4 fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
       <div class="container">
         <button
-          class="navbar-toggler shadow-none bg-light"
+          class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -30,35 +28,27 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon shadow-none bg-light"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse col-1" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav w-100 justify-content-between">
             <li class="nav-item">
-              <a class="nav-link fw-bold" href="index.html">Inicio</a>
+              <a class="nav-link active" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold" href="categories.html">Categorías</a>
+              <a class="nav-link" href="categories.html">Categorías</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold" href="sell.html">Vender</a>
+              <a class="nav-link" href="sell.html">Vender</a>
             </li>
-             <li class="nav-item">
-              <a class="nav-link fw-bold" href="login.html">Usuario</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="login.html" id="nickname" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
-                <ul class="dropdown-menu" aria-labelledby="nickname">
-                  <li><a class="dropdown-item" href="index.html" id="cerrar">Cerrar Sesion</a></li>
-                </ul>
-            </li>
-          </ul> 
+            <li class="nav-item" id="nickname"></li>
+          </ul>
         </div>
       </div>
     </nav>
     <main>
       <div class="jumbotron text-center"></div>
-      <div class="album py-5 body">
+      <div class="album py-5 bg-light">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
