--- a/products.html
+++ b/products.html
@@ -16,7 +16,6 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/stylesautos.css" rel="stylesheet">
-  <link href="css/stylesmenu.css" rel="stylesheet">
 </head>
 
 <body>
@@ -87,17 +86,17 @@
                 <button id="sortListCostAsc"><i class="bi bi-sort-numeric-down"></i></button>
                 <button id="sortListRel"><i class="bi bi-sort-down-alt"></i></button>
               </div>
-              <div class=" d-flex justify-content-end gap-2">
-                <div class="justify-content-end">
-                  <input type="number"  placeholder="Precio min." id="min" class="btn-xs" style="">
+              <div class="row mb-3 justify-content-end">
+                <div class="col-sm">
+                  <input type="number" placeholder="min" id="min" style="">
                 </div>
-                <div class="justify-content-end">
-                  <input type="number" placeholder="Precio max." id="max" class="btn-xs" style="">
+                <div class="col-sm">
+                  <input type="number" placeholder="max" id="max" style="">
                 </div>
-                <div class="justify-content-end">
-                  <input type="button" value="enviar" id="rangeValue" class="btn-fil">
-                  <input type="button" value="limpiar" id="clearFilters" class="btn-fil">
+                <div class="col-sm">
+                  <input type="button" value="enviar" id="rangeValue">
                 </div>
+              
               </div>
             </div>
         <div id="items" class="row row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-4 g-3 g-sm-4 g-lg-3 g-xl-4">
