--- a/categories.html
+++ b/categories.html
@@ -10,8 +10,6 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-  <link href="css/stylesmenu.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -39,7 +37,7 @@
   </nav>
   <main class="pb-5">
     <div class="text-center p-4">
-      <h2 class="fw-bold">Categorías</h2>
+      <h2>Categorías</h2>
       <p class="lead">Verás aquí todas las categorías del sitio.</p>
     </div>
     <div class="container">
