--- a/product-info.html
+++ b/product-info.html
@@ -10,16 +10,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-  <link href="css/stylesproduct-info.css" rel="stylesheet">
-  
+  <link href="css/products-info.css" rel="stylesheet">
 </head>
+
 <body>
   
 <header>
@@ -75,82 +71,6 @@
   <main>
  
   </main>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 justify-content-between">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="categories.html">Categorías</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sell.html">Vender</a>
-          </li>
-          <li class="nav-item" id="nickname">
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  </style>
-</head>
- <header class="d-flex justify-content-between align-items-center p-2 ">
-  <img src="img/login_Jap1.png" alt="Logo izquierda" class="img-fluid" style="max-height:70px;">
-  <img src="img/login-e-mercado.png" alt="Logo derecha" class="img-fluid" style="max-height:60px;">
-</header>
-
- <div class="container my-6">
-    <div class="card-custom row">
-      <div class="col-md-6">
-        <div id="carCarousel" class="carousel slide mt-3" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="img/prod50921_1.jpg" class="d-block w-100" alt="Auto 1">
-            </div>
-            <div class="carousel-item">
-              <img src="img/prod50921_2.jpg" class="d-block w-100" alt="Auto 2">
-            </div>
-            <div class="carousel-item">
-              <img src="img/prod50921_3.jpg" class="d-block w-100" alt="Auto 3">
-            </div>
-            <div class="carousel-item">
-              <img src="img/prod50921_4.jpg" class="d-block w-100" alt="Auto 3">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
-          </button>
-        </div>
-      </div>
-            <div class="col-md-6">
-        <h2 class="mb-5 mt-3 ms-3 fw-bolder"> CHEVROLET ONIX JOY</h2>
-
-        <p class="ms-3 fw-normal"><strong>Precio:</strong> US$ 13.500</p>
-        <p class="ms-3 fw-normal"><strong>Categoría:</strong> Autos</p>
-        <p class="ms-3 fw-normal"><strong>Cantidad de vendidos:</strong> 14</p>
-      </div>
-      <div class="col-12 mt-3 fw-normal">
-        <h5>Descripción:</h5>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
-          dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-          officia deserunt mollit anim id est laborum.
-        </p>
-      </div>
-    </div>
-  </div>
-
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
