--- a/product-info.html
+++ b/product-info.html
@@ -62,8 +62,8 @@
     </nav>
 </head>
  <header class="d-flex justify-content-between align-items-center p-2 ">
-  <img src="img/login_Jap1.png" alt="Logo izquierda" class="img-fluid" style="max-height:70px;">
-  <img src="img/login-e-mercado.png" alt="Logo derecha" class="img-fluid" style="max-height:60px;">
+  <img src="img/login_Jap1.png" alt="Logo izquierda" class="img-fluid mt-2" style="max-height:70px;">
+  <img src="img/login-e-mercado.png" alt="Logo derecha" class="img-fluid mt-5" style="max-height:60px;">
 </header>
 
  <div class="container my-6">
@@ -95,11 +95,11 @@
             <div class="col-md-6">
         <h2 class="mb-5 mt-3 ms-3 fw-bolder"> CHEVROLET ONIX JOY</h2>
 
-        <p class="ms-3 fw-normal"><strong>Precio:</strong> US$ 13.500</p>
-        <p class="ms-3 fw-normal"><strong>Categoría:</strong> Autos</p>
-        <p class="ms-3 fw-normal"><strong>Cantidad de vendidos:</strong> 14</p>
+        <p class="ms-3 fw-normal precio-valor">US$ 13.500</p>
+        <p class="ms-3 mt-5 fw-normal cat"><strong>Categoría:</strong> Autos</p>
+        <p class="ms-3 fw-normal cat"><strong>Cantidad de vendidos:</strong> 14</p>
       </div>
-      <div class="col-12 mt-3 fw-normal">
+      <div class="col-12 mt-3 fw-normal des">
         <h5>Descripción:</h5>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
