--- a/product-info.html
+++ b/product-info.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
 
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -51,6 +52,14 @@
     <div class="card-custom row">
       <div class="col-md-6">
         <div id="carCarousel" class="carousel slide mt-3" data-bs-ride="carousel">
+
+            <div class="carousel-indicators">
+             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="img/prod50921_1.jpg" class="d-block w-100" alt="Auto 1">
@@ -92,6 +101,8 @@
       </div>
     </div>
   </div>
+
+
 
   <footer class="text-muted">
     <div class="container">
