--- a/product-info.html
+++ b/product-info.html
@@ -85,9 +85,9 @@
             <div class="col-md-6">
         <h2 class="mb-5 mt-3 ms-3 fw-bolder"> CHEVROLET ONIX JOY</h2>
 
-        <p class="ms-3 fw-normal"><strong>Precio:</strong> US$ 13.500</p>
-        <p class="ms-3 fw-normal"><strong>Categoría:</strong> Autos</p>
-        <p class="ms-3 fw-normal"><strong>Cantidad de vendidos:</strong> 14</p>
+        <p class="precio ms-3 fw-normal"><strong>Precio:</strong> US$ 13.500</p>
+        <p class="categorias ms-3 fw-normal"><strong>Categoría:</strong> Autos</p>
+        <p class="vendidos ms-3 fw-normal"><strong>Cantidad de vendidos:</strong> 14</p>
       </div>
       <div class="col-12 mt-3 fw-normal">
         <h5>Descripción:</h5>
