--- a/product-info.html
+++ b/product-info.html
@@ -87,7 +87,7 @@
 
         <p class="ms-3 fw-normal precio-valor"><strong>Precio:</strong> US$ 13.500</p>
         <p class="ms-3 fw-normal cat"><strong>Categoría:</strong> Autos</p>
-        <p class="ms-3 fw-normal cat2"><strong>Cantidad de vendidos:</strong> 14</p>
+        <p class="ms-3 fw-normal vendidos"><strong>Cantidad de vendidos:</strong> 14</p>
       </div>
       <div class="col-12 mt-3 fw-normal">
         <h5>Descripción:</h5>
