--- a/product-info.html
+++ b/product-info.html
@@ -93,6 +93,7 @@
       </div>
     </div>
   </div>
+  <div id="product-container" class="row mt-4"></div>
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
