--- a/product-info.html
+++ b/product-info.html
@@ -81,18 +81,20 @@
     <div class="col-md-6">
       <div id="carCarousel" class="carousel slide mt-3" data-bs-ride="carousel">
         <div class="carousel-inner">
-      
+ 
+        </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon"></span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carCarousel" data-bs-slide="next">
           <span class="carousel-control-next-icon"></span>
         </button>
-        </div>
       </div>
       </div>
+          <div id="product-container" class="row mt-4"></div>
     </div>
   </div>
+  
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
