--- a/product-info.html
+++ b/product-info.html
@@ -81,6 +81,7 @@
     <div class="col-md-4">
       <div id="carCarousel" class="carousel slide mt-3" data-bs-ride="carousel">
         <div class="carousel-inner">
+        
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon"></span>
@@ -88,6 +89,12 @@
         <button class="carousel-control-next" type="button" data-bs-target="#carCarousel" data-bs-slide="next">
           <span class="carousel-control-next-icon"></span>
         </button>
+          <div class="carousel-indicators">
+             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
       </div>
       </div>
           <div id="product-container" class="row mt-4"></div>
