--- a/product-info.html
+++ b/product-info.html
@@ -77,29 +77,30 @@
   <img src="img/login-e-mercado.png" alt="Logo derecha" class="img-fluid mt-5" style="max-height:60px;">
 </header>
 <div class="container my-6">
-  <div class="card-custom">
-    <div class="col-md-4">
+  <div class="row card-custom row">
+    <div class="col-md-6">
       <div id="carCarousel" class="carousel slide mt-3" data-bs-ride="carousel">
-        <div class="carousel-inner">
-        
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carCarousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carCarousel" data-bs-slide="next">
-          <span class="carousel-control-next-icon"></span>
-        </button>
           <div class="carousel-indicators">
              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
+        <div class="carousel-inner"></div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </button>
       </div>
-      </div>
-          <div id="product-container" class="row mt-4"></div>
+    </div>
+    <div class="col-md-6 d-flex items">
+      <div id="product-container" class="w-100"></div>
     </div>
   </div>
+</div>
   
   <footer class="text-muted">
     <div class="container">
