--- a/product-info.html
+++ b/product-info.html
@@ -77,10 +77,10 @@
   <img src="img/login-e-mercado.png" alt="Logo derecha" class="img-fluid mt-5" style="max-height:60px;">
 </header>
 <div class="container my-6">
-  <div class="row card-custom row">
+  <div class="row card-custom row ">
     <div class="col-md-6">
       <div id="carCarousel" class="carousel slide mt-3" data-bs-ride="carousel">
-          <div class="carousel-indicators">
+          <div class="carousel-indicators mt-3">
              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -97,7 +97,7 @@
       </div>
     </div>
     <div class="col-md-6 d-flex items">
-      <div id="product-container" class="w-100"></div>
+      <div id="product-container" class="w-70"></div>
     </div>
   </div>
 </div>
