--- a/product-info.html
+++ b/product-info.html
@@ -99,7 +99,9 @@
     <div class="col-md-6 d-flex items">
       <div id="product-container" class="w-70"></div>
     </div>
+     <div class="row" id="desc"></div>
   </div>
+ 
 </div>
   
   <footer class="text-muted">
