--- a/product-info.html
+++ b/product-info.html
@@ -96,12 +96,12 @@
         </button>
       </div>
     </div>
-    <div class="col-md-6 d-flex items">
+    <div class="col-md-6 items">
       <div id="product-container" class="w-70"></div>
     </div>
-     <div class="row" id="desc"></div>
+    <div class="row" id="desc"></div>
   </div>
- 
+  
 </div>
   
   <footer class="text-muted">
