--- a/products.html
+++ b/products.html
@@ -37,7 +37,7 @@
           <nav class="navbar navbar-expand-lg p-1 d-flex flex-row shadow-sm rounded-4 fixed-top">
       <div class="container">
         <button
-          class="navbar-toggler shadow-none bg-light"
+          class="navbar-toggler shadow-none bg-light col align-self-end"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -71,13 +71,6 @@
                   </select>
                    </li>
                 </ul>
-            </li>
-             <li class="nav-item">
-              <select class="form-select form-select-sm" id="themeSwitch" aria-label=".form-select-sm example">
-                    <option value="auto">auto</option>
-                    <option value="light">lightmode</option>
-                    <option value="dark">darkmode</option>
-              </select>
             </li>
           </ul> 
         </div>
