--- a/product-info.html
+++ b/product-info.html
@@ -103,10 +103,11 @@
     <div class="col-md-6 items">
       <div id="product-container" class="w-70"></div>
     </div>
+   
     <div class="row" id="desc"></div>
   </div>
 </div>
- <div class="container">
+  <div class="container">
   <h3 class=" text-center mt-5 deco">Productos relacionados</h3>
   <div class="row g-4" id="related-products">
     
@@ -186,7 +187,7 @@
 </svg>  
     </div>
           <div class="d-flex justify-content-end">
-            <button class="btn btn-primary">Enviar</button>
+            <button class="btn btn-primary inset-shadow">Enviar</button>
           </div>
         </div>
       </div>
