--- a/product-info.html
+++ b/product-info.html
@@ -107,15 +107,14 @@
     <div class="row" id="desc"></div>
   </div>
 </div>
-  <div class="container">
   <h3 class=" text-center mt-5 deco">Productos relacionados</h3>
   <div class="row g-4" id="related-products">
     
-    <div class="col-md-3 col-6 col-sm-6">
-      <div class="card h-100 shadow-sm">
+    <div class="col-md-3 col-6 col-sm-6" >
+      <div  class="card h-100 shadow-sm" >
         <img src="img/car1.jpg" class="card-img-top" alt="Producto 1">
         <div class="card-body card">
-          <h5 class="card-title fs-6 fs-md-5 fs-lg-4">Producto 1</h5>
+          <h5 class="card-text fs-6 fs-md-5 fs-lg-4">Producto 1</h5>
           <p class="card-text fs-6 fs-md-5 fs-lg-4">Descripción breve del producto relacionado.</p>
         </div>
       </div>
