disenio product-info

--- a/product-info.html
+++ b/product-info.html
@@ -155,15 +155,15 @@
 </div>
 
   <div class="container" id="mensajes">
-    <div class="card mb-4 mt-1 h-100 shadow-sm">
-  <div class="row g-4 ">
+    <div class="card mb-4 mt-1 h-100 shadow-md card-coment">
+  <div class="row g-4">
     <div class="col-md-2">
       <div class="card-body ">
       <img src="img/img_perfil.png" class="img-fluid start" alt="comentarios" style="max-width: 80px;">
       </div>
     </div>
     <div class="col-md-6 ">
-      <div class="card-body ">
+      <div class="card-body">
         <h5 class="card-title">Person1</h5>
         <p id="msg" class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -191,7 +191,7 @@
     </div>
     </div>
 
-       <div class="card mb-4 mt-3 h-100 shadow-sm">
+       <div class="card mb-4 mt-3 h-100 shadow-md card-coment">
   <div class="row g-4">
         <div class="col-md-2">
           <div class="card-body">
