changing product selection

--- a/product-info.html
+++ b/product-info.html
@@ -109,7 +109,7 @@
   </div>
 </div>
   <h3 class=" text-center mt-5 deco">Productos relacionados</h3>
-  <div class="row d-flex justify-content-center align-items-center" id="related-products">
+  <div class="row d-flex justify-content-center align-items-center" id="items">
  </div>
 
  <div class="container">
