--- a/my-profile.html
+++ b/my-profile.html
@@ -19,7 +19,7 @@
   <link href="css/stylesmenu.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="margin-top: 20vh;">
  <nav class="navbar navbar-expand-lg p-1 d-flex flex-row shadow-sm rounded-4 fixed-top">
       <div class="container">
         <button
