--- a/my-profile.html
+++ b/my-profile.html
@@ -17,6 +17,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/stylesmenu.css" rel="stylesheet">
     <link href="css/stylemy-profile.css" rel="stylesheet">
+   
 </head>
 
 <body style="margin-top: 20vh;">
@@ -110,6 +111,7 @@
       <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
     </div>
   </footer>
+   <script src="js/navbar.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script defer src="js/my-profile.js"></script>
