--- a/categories.html
+++ b/categories.html
@@ -14,7 +14,7 @@
   <link href="css/styles.css" rel="stylesheet">
   <link href="css/stylesmenu.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/stylescategoria.css">
- 
+  
 
 </head>
 
@@ -158,6 +158,7 @@
       <div></div>
     </div>
   </div>
+  <script src="js/navbar.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/categories.js"></script>
