--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/stylesmenu.css" rel="stylesheet">
-
+    
   </head>
 
   <body>
@@ -164,6 +164,7 @@
         </p>
       </div>
     </footer>
+    <script src="js/navbar.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/index.js"></script>
     <script src="js/init.js"></script>
