--- a/product-info.html
+++ b/product-info.html
@@ -210,6 +210,7 @@
       <div></div>
     </div>
   </div>
+  <script src="js/navbar.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
