logos intento de que no se superpongan

--- a/login.html
+++ b/login.html
@@ -20,9 +20,11 @@
   </style>
 </head>
   
-<body class="d-flex justify-content-center align-items-center vh-100">
-  <img src="img/login_JaP.png" alt="Logo" class="position-absolute top-0 start-0 m-1" width="450">
-  <img src="img/login-e-mercado.png" alt="Logo" class="position-absolute top-0 end-0 m-3" width="350">
+<body class="d-flex justify-content-center align-items-center vh-100 mx-auto">
+  
+  <img src="img/login_JaP.png" alt="Logo" class="position-absolute top-0 start-0 m-1 login_img " width="450">
+  <img  src="img/login-e-mercado.png"  alt="Logo" class="position-absolute top-0 end-0 m-3 emercado" width="350">
+
   <div class="card shadow p-4 login-card" style="width: 22rem;">
       <h3 class="text-center mb-4">Iniciar Sesión</h3>
     
