--- a/login.html
+++ b/login.html
@@ -32,6 +32,7 @@
       <div class="mb-3">
         <label for="usuario" class="form-label">Usuario</label>
         <input type="text" class="form-control" id="usuario" placeholder="Ingresa tu usuario" required>
+        <p class="error-msg" style="display: none; color: red;"> Email no valido</p>
       </div>
 
       <div class="mb-3">
