--- a/cart.html
+++ b/cart.html
@@ -48,8 +48,8 @@
     <div class="text-center p-4">
       <h2 class="fw-bold mt-4">Carrito</h2>
     </div>
-    <div>
-      
+    <div class="container">
+        
     </div>
   </main>
   <footer class="text-muted">
