Funcion desplegar carrito

--- a/cart.html
+++ b/cart.html
@@ -48,9 +48,10 @@
     <div class="text-center p-4">
       <h2 class="fw-bold mt-4">Carrito</h2>
     </div>
-    <div class="container">
+    <div id="container-carrito">
         
     </div>
+ 
   </main>
   <footer class="text-muted">
     <div class="container">
