solve input problem

--- a/product-info.html
+++ b/product-info.html
@@ -91,7 +91,7 @@
           <button id="buy" class="inset-shadow btn btn-primary btn-lg me-2">Comprar</button>
           <div class="btn-group" id="save">
             <button id="addcart" class="inset-shadow btn btn-primary btn-lg "><i class="bi bi-bag-plus-fill"></i></button>
-            <input type="number" class="form-control" id="amountInput" min="1" step="1">
+            <input type="number" class="form-control" value="1" id="amountInput" min="1" step="1" max="69">
           </div>
         </div>
 
