--- a/cart.html
+++ b/cart.html
@@ -77,7 +77,7 @@
         <div class="container">
         <div class="card">
           <div class="card-body">
-              <div>Subtotal: <label class="fst-italic">123123</label></div> 
+              <div>Subtotal: <span id="subtotal" class="fst-italic">123123</span></div> 
           </div>
           <div class="card-footer">
             <div class="btn"> Comprar</div>
