styling user info

--- a/my-profile.html
+++ b/my-profile.html
@@ -58,7 +58,7 @@
                   <input type="number" class="form-control" id="telefono" placeholder="Enter telefono">
               </div>
 
-              <button type="submit" class="btn btn-primary" id="update">Submit</button>
+              <button type="submit" class="btn btn-lg inset-shadow" id="update">Guardar</button>
 
           </form>
 
