--- a/cart.html
+++ b/cart.html
@@ -67,11 +67,11 @@
       </div>
     </div>
     <div class="row">
-    <div class="col-8" id="container-carrito">
+    <div class="col-lg-9 col-sm-12" id="container-carrito">
      
     </div>
-    <div class="col-4">
-      <div class="container">
+    <div class="col">
+      <div class="mt-2  container-fluid">
       <div class="card">
         <div class="card-body">
             <div>Subtotal: <span id="subtotal" class="fst-italic">123123</span></div> 
