--- a/cart.html
+++ b/cart.html
@@ -183,7 +183,7 @@
      </div>
 
       <div class="card-footer text-center">
-        <button class="btn btn-primary w-100">Comprar</button>
+        <button class="btn w-100">Comprar</button>
       </div>
     </div>
   </div>
