--- a/cart.html
+++ b/cart.html
@@ -66,7 +66,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row ">
     <div class="col-lg-8 col-sm-12" id="container-carrito">
         </div>
       <div class="col-lg-4 col-sm-12">
@@ -104,8 +104,6 @@
       </div>
     </div>
   </div>
-
-  
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingDireccion">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDireccion"
@@ -140,26 +138,19 @@
       </div>
     </div>
   </div>
-     <div class="accordion-item">
-    <h2 class="accordion-header" id="headingCosto">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCosto"
-        aria-expanded="false" aria-controls="collapseCosto">
-        Costo
-        </button>
-    </h2>
-    <div id="collapseCosto" class="accordion-collapse collapse" aria-labelledby="headingCosto" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <div class="mb-3">
-        <div class="fw-bold">Subtotal: <span id="subtotal" class="fw-semibold">$123</span></div>
-      <div class="mb-3">
-        <div class="fw-bold">Total:
-        <span id="total" class="fw-semibold">$USD123</span>
-        </div>
-      </div>
-      </div>
-      </div>
+  <div class="card costo-card my-3">
+  <div class="card-header">
+    Costo
+  </div>
+  <div class="card-body">
+    <div class="mb-3">
+      <div class="fw-bold">Subtotal: <span id="subtotal" class="fw-semibold">$123</span></div>
     </div>
-     </div>
+    <div class="mb-3">
+      <div class="fw-bold">Total: <span id="total" class="fw-semibold">$USD123</span></div>
+    </div>
+  </div>
+</div>
      <div class="accordion-item">
     <h2 class="accordion-header" id="headingPago">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePago"
@@ -181,10 +172,8 @@
       </div>
       </div>
      </div>
-
-      <div class="card-footer text-center">
+     <div>
         <button class="btn w-100">Comprar</button>
-      </div>
     </div>
   </div>
 </div>
